# game_of_life

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  stretch.cpp  test  update
data/: 3enginecordershipeater.txt  Syringe  Syringe.txt  pulsar.txt  text.txt
game/: CMakeLists.txt  game.cpp  game.h
test_mikko/: test.cpp  tests.txt
tests/: CMakeLists.txt  utils_tests.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
